
First version.

Email subscribers plugin has options to send newsletters to subscribers. It has a separate page with HTML editor to create a HTML newsletter. 
Also have options to send notification email to subscribers when new posts are published to your blog. Separate page available to include and 
exclude categories to send notifications. Using plugin Import and Export options admins can easily import registered users and commenters to 
subscriptions list.

********************************Version 1.1************************************************************

1. Subscriber admin page, Check ALL & Uncheck All bug fixed.
2. Updated Help documents.

********************************Version 1.2************************************************************

* Widget translation issue has been fixed
* PHP warning message from Subscribers Export page has been removed.

********************************Version 1.3************************************************************

* Fixed small error on mail compose page.
* Added check for Already Confirmed emails. This is to prevent user clicking optin email link multiple time.

********************************Version 1.4************************************************************

* Scheduled published posts issue has been fixed (From this version onwards, Notification emails will be triggered for scheduled posts)
* Bulk update option for subscribers group in admin view subscribers page.

********************************Version 1.5************************************************************

* Bug fix on admin notification email for new subscribers.

********************************Version 1.6************************************************************

* Bug fix on Send Mail/Notification warning message (i.e Call to undefined method issue has been fixed)
Call to undefined method es_cls_common::es_sent_report_plain() 	- Fixed
Call to undefined method es_cls_common::es_sent_report_html() 	- Fixed