@@ -43,3 +43,11 @@ subscriptions list.
 * Bug fix on Send Mail/Notification warning message (i.e Call to undefined method issue has been fixed)
 Call to undefined method es_cls_common::es_sent_report_plain() 	- Fixed
 Call to undefined method es_cls_common::es_sent_report_html() 	- Fixed
+
+********************************Version 1.7************************************************************
+
+* Bug fixed on individual subscriber delete option.
+* Bug fixed on individual subscriber resend confirmation mail option.
+* Bug fixed on Double Opt-In welcome mail check (Previously it was not checking admin setting for welcome mail).
+
+
